--- a/shop.css
+++ b/shop.css
@@ -116,6 +116,11 @@ body {
   opacity: 0.7;
 }
 
+
+.burger-menu { 
+    display: none; 
+  }
+
 /* header end */
 
 
@@ -246,12 +251,33 @@ h3 {
     font-size: 20px;
 }
 
-.chocolate-card-footer button {
+.chocolate-card-footer {
+    display: flex;
+    flex-direction: row;
+}
+
+.chocolate-card-footer button.buy {
     width: 80px;
     height: 40px;
     margin-top: 10px;
     margin-left: 30px;
     border-radius: 10px;
+    background-color: #ffdedb;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: all 0.4s ease 0s;
+}
+
+.chocolate-card-footer a.cart {
+    width: 80px;
+    height: 40px;
+    margin-top: 10px;
+    margin-left: 20px;
+    border-radius: 10px;
+    border: 2px solid black;
+    color: black;
+    font-size: 13px;
+    padding-top: 3px;;
     background-color: #ffdedb;
     text-transform: uppercase;
     text-decoration: none;
@@ -267,33 +293,15 @@ h3 {
     transition: all 0.4s ease 0s;
 }
 
-
-
-/* .footer-container{
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 30px;
-    background-color: rgb(255, 255, 255);
-}
-.footer-container ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
+.chocolate-card-footer a:hover {
+    background-color: #fff5ff;
+    letter-spacing: 1px;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+    transition: all 0.4s ease 0s;
 }
 
-.footer-container ul li {
-    margin: 0 10px; 
-}
-.footer-container ul li a {
-    text-decoration: none;
-    color: black; 
-    font-weight: bold; 
-    align-items: center;
-} */
 
 
 /* footer start */
@@ -546,5 +554,113 @@ h3 {
  
   
 }
+
+
+
+
+@media screen and (max-width: 400px) { 
+    .burger-menu { 
+        display: block;  
+    } 
+ 
+    .header__list { 
+        display: none;  
+    } 
+ 
+     
+ 
+.burger-icon { 
+  display: flex; 
+  flex-direction: column; 
+  justify-content: space-between; 
+  width: 30px; 
+  height: 20px; 
+  cursor: pointer; 
+} 
+ 
+.bar { 
+  width: 100%; 
+  height: 3px; 
+  background-color: black; 
+  border-radius: 5px; 
+} 
+ 
+.burger-menu-list { 
+  padding: 0; 
+  margin: 0; 
+  list-style: none; 
+} 
+ 
+ 
+.burger-menu-list .header__item { 
+  display: block; 
+  padding: 10px 15px; 
+  text-align: center; 
+  border-bottom: 1px solid #ccc; 
+} 
+ 
+}
+
+
+
+
+/* Modal styles */
+.modal {
+    display: block;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-content h2 {
+    margin-bottom: 20px;
+}
+
+.modal-content p {
+    margin-bottom: 20px;
+}
+
+.modal-content input[type="number"] {
+    width: 50px;
+    margin-right: 10px;
+}
+
+.modal-content button {
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+.modal-content .see-cart {
+    text-decoration: none;
+}
+
 
 
